--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -262,6 +262,7 @@ p {
   font-weight: 600;
   position: relative;
   padding-left: 26px;
+  margin-bottom: 5px;
 }
 .section-title span::before {
   position: absolute;
@@ -343,7 +344,12 @@ p {
 }
 @media (max-width: 767px) {
   .modularize-header-area .header-wrapper {
-    display: block;
+    display: flex;
+  }
+  .modularize-header-area .templates-logo img {
+    margin: 10px 0 0 53px;
+    max-width: 150px;
+  
   }
 }
 .modularize-header-area .header-box {
@@ -883,210 +889,6 @@ p {
   .header-main-info .header-mini-btn .toggle-bar {
     display: inline-block;
   }
-}
-
-/*** 
-
-====================================================================
-    Search Popup
-====================================================================
-
-***/
-.search-popup {
-  position: fixed;
-  left: 0;
-  top: 0;
-  height: 100vh;
-  width: 100%;
-  z-index: 99999;
-  margin-top: -540px;
-  transform: translateY(-100%);
-  background-color: rgba(0, 0, 0, 0.9);
-  -webkit-transition: all 500ms cubic-bezier(0.86, 0, 0.07, 1);
-  -moz-transition: all 500ms cubic-bezier(0.86, 0, 0.07, 1);
-  -o-transition: all 500ms cubic-bezier(0.86, 0, 0.07, 1);
-  transition: all 1500ms cubic-bezier(0.86, 0, 0.07, 1);
-  /* easeInOutQuint */
-  -webkit-transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
-  -moz-transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
-  -o-transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
-  transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
-  /* easeInOutQuint */
-}
-
-.sidenav-bar-visible .search-popup {
-  width: 80%;
-}
-
-.search-popup:before {
-  position: absolute;
-  left: 0;
-  top: 100%;
-  width: 100%;
-  height: 560px;
-  background-image: url(../images/waves-shape.png);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  margin-top: 0px;
-  content: '';
-}
-
-.search-active .search-popup {
-  transform: translateY(0%);
-  margin-top: 0;
-}
-
-.search-popup .close-search {
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 75%;
-  margin: 0 auto;
-  margin-top: -200px;
-  border-radius: 50%;
-  text-align: center;
-  background-color: #b882fc;
-  width: 70px;
-  cursor: pointer;
-  font-family: 'flaticon';
-  border-bottom: 0;
-  -webkit-transition: all 500ms ease;
-  -moz-transition: all 500ms ease;
-  -ms-transition: all 500ms ease;
-  -o-transition: all 500ms ease;
-  transition: all 500ms ease;
-  opacity: 0;
-  visibility: hidden;
-}
-
-.search-popup .close-search span {
-  position: relative;
-  display: block;
-  height: 70px;
-  width: 70px;
-  font-size: 30px;
-  line-height: 70px;
-  color: #fff;
-}
-
-.search-active .search-popup .close-search {
-  visibility: visible;
-  opacity: 1;
-  top: 50%;
-  -webkit-transition-delay: 1500ms;
-  -moz-transition-delay: 1500ms;
-  -ms-transition-delay: 1500ms;
-  -o-transition-delay: 1500ms;
-  transition-delay: 1500ms;
-}
-
-.search-popup form {
-  position: absolute;
-  max-width: 700px;
-  top: 50%;
-  left: 15px;
-  right: 15px;
-  margin: -35px auto 0;
-  transform: scaleX(0);
-  transform-origin: center;
-  background-color: #1d1729;
-  -webkit-transition: all 300ms ease;
-  -moz-transition: all 300ms ease;
-  -ms-transition: all 300ms ease;
-  -o-transition: all 300ms ease;
-  transition: all 300ms ease;
-}
-
-.search-active .search-popup form {
-  transform: scaleX(1);
-  -webkit-transition-delay: 1200ms;
-  -moz-transition-delay: 1200ms;
-  -ms-transition-delay: 1200ms;
-  -o-transition-delay: 1200ms;
-  transition-delay: 1200ms;
-}
-
-.search-popup .form-group {
-  position: relative;
-  margin: var(--margin-zero);
-  overflow: hidden;
-}
-
-.search-popup .form-group input[type='text'],
-.search-popup .form-group input[type='search'] {
-  position: relative;
-  display: block;
-  font-size: 18px;
-  line-height: 50px;
-  color: #1d1729;
-  height: 70px;
-  width: 100%;
-  padding: 10px 30px;
-  background-color: #fff;
-  -webkit-transition: all 500ms ease;
-  -moz-transition: all 500ms ease;
-  -ms-transition: all 500ms ease;
-  -o-transition: all 500ms ease;
-  transition: all 500ms ease;
-  font-weight: 500;
-  text-transform: capitalize;
-  border: 0;
-}
-
-.search-popup .form-group input[type='submit'],
-.search-popup .form-group button {
-  position: absolute;
-  right: 30px;
-  top: 0px;
-  height: 70px;
-  line-height: 70px;
-  background: transparent;
-  text-align: center;
-  font-size: 24px;
-  color: #1d1729;
-  padding: 0;
-  cursor: pointer;
-  -webkit-transition: all 500ms ease;
-  -moz-transition: all 500ms ease;
-  -ms-transition: all 500ms ease;
-  -o-transition: all 500ms ease;
-  transition: all 500ms ease;
-  border: 0;
-}
-
-.search-popup .form-group input[type='submit']:hover,
-.search-popup .form-group button:hover {
-  color: #1d1729;
-}
-
-.search-popup input::placeholder,
-.search-popup textarea::placeholder {
-  color: #1d1729;
-}
-
-.search-popup .close-search.style-two {
-  position: absolute;
-  right: 25px;
-  left: auto;
-  color: #fff;
-  width: auto;
-  height: auto;
-  top: 25px;
-  margin: 0px;
-  border: none;
-  background: none !important;
-  box-shadow: none !important;
-  -webkit-transition: all 500ms ease;
-  -moz-transition: all 500ms ease;
-  -ms-transition: all 500ms ease;
-  -o-transition: all 500ms ease;
-  transition: all 500ms ease;
-}
-
-.search-popup .close-search.style-two span {
-  font-size: 20px;
-  color: #fff;
 }
 
 .main-header .sticky-header .search-box-btn {
@@ -3197,9 +2999,9 @@ p {
 }
 .about-thumb-content .about-sub-item {
   display: flex;
-  align-items: center;
   gap: 16px;
 }
+
 @media (max-width: 767px) {
   .about-thumb-content .about-sub-item {
     display: block;
@@ -3240,7 +3042,8 @@ p {
 }
 .about-thumb-content .about-sub-item .number i {
   color: #323232;
-  font-size: 12px;
+  font-size: 11px;
+  margin-top: 11px;
 }
 
 .about-thumb-content .about-sub-item .number span::before {
@@ -8711,6 +8514,7 @@ single-tema-item .content .share-icon > a {
 }
 
 /*---------------checkbox style-2---------------*/
+
 .checkbox_style2 input[type='checkbox'] + label span {
   border-radius: 3px;
 }
@@ -8760,8 +8564,8 @@ single-tema-item .content .share-icon > a {
   transform: translate(-50%, -50%);
   background: #fff;
   border-radius: 50%;
-  height: 75px;
-  width: 75px;
+  height: 80px;
+  width: 80px;
   z-index: -1;
 }
 .modularize-contact-page-area .conatct-info .item .content span {
