--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -17,6 +17,16 @@ body {
   box-sizing: border-box;
 }
 
+::-moz-selection { /* Code for Firefox */
+  color: #fff;
+  background: #323232;
+}
+
+::selection {
+  color: #fff;
+  background: #323232;
+}
+
 img {
   max-width: 100%;
 }
@@ -525,7 +535,6 @@ p {
   display: inline-block;
   margin-right: 45px;
   position: relative;
-  padding: 27px 0;
 }
 @media only screen and (min-width: 10px) and (max-width: 1450px) {
   .header-main-nav-box ul li {
@@ -10220,4 +10229,20 @@ h4 {
   img {
   width: 100%;
   height: 100%;
+}
+
+
+/* Services TechTools */
+.modularize-service-tools-area i {
+  font-size: 100px;
+}
+
+.modularize-service-tools-area .service-techtool-icon {
+  margin-right: 20px;
+  margin-left: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
 }
