--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -9113,6 +9113,8 @@ single-tema-item .content .share-icon > a {
   width: 16px;
 }
 
+/*  Carreer */
+
 .modularize-carrier-item {
   display: flex;
   align-items: center;
